# android-introspection

./: .gitignore  .gitmodules  README.md  azure-pipelines.yml  build.gradle  docker-compose.yml
.github/workflows/: android-introspection-release.yml  android-introspection.yml  android.yml  build.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/gradle/scripts/: androidCommon.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: CMakeLists.txt  CustomWarnings.cmake  build.gradle
android/lib/src/main/: AndroidManifest.xml
android/vpn/: .gitignore  CMakeLists.txt
android/vpn/src/main/: AndroidManifest.xml
android/vpn/src/main/aidl/com/github/jonforshort/vpn/: IVpnService.aidl
android/vpn/src/main/cpp/: CMakeLists.txt
android/vpn/src/main/cpp/aidl/: CMakeLists.txt  update_aidl.sh
android/vpn/src/main/cpp/aidl/com/github/jonforshort/vpn/: IVpnService.cpp
android/vpn/src/main/cpp/aidl/include/aidl/com/github/jonforshort/vpn/: BpVpnService.h  BpVpnServiceListener.h  IVpnService.h
android/vpn/src/main/cpp/utils/: Android.cmake  CMakeLists.txt  data_stream.cpp
android/vpn/src/main/cpp/utils/include/utils/: log.h  macros.h
android/vpn/src/main/cpp/vpn/: CMakeLists.txt  LocalVpnService.cpp  VpnConnection.h  VpnService.cpp  VpnService.h  VpnServiceJni.cpp
android/vpn/src/main/java/com/github/jonforshort/vpn/: LocalVpnService.kt  NativeVpnService.kt
android/vpn/src/main/java/com/github/thejunkjon/vpn/: NativeVpnService.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
cm/: Dockerfile
cm/android/: Dockerfile
cm/docker/android/: Dockerfile
cm/docker/android-dev/: Dockerfile
cm/docker/scripts/: cm_android.sh  cm_web_app.sh  groupadd
cm/docker/web_app/: Dockerfile
cm/docker/web_app-base/: Dockerfile
cm/scripts/: useradd  usermod
cm/web_app/: Dockerfile
dev/scripts/: env.sh
dev/vscode/: launch.json  launch_wasm.json
dev/vscode/wasm/: launch.json  tasks.json
gradle/scripts/: androidCommon.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  CodeCoverage.cmake  CustomFlags.cmake  CustomWarnings.cmake  SetMyProperties.cmake  build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  jni.h  native-lib.cpp
lib/src/main/cpp/android-lib/: CMakeLists.txt  android-lib.cpp
lib/src/main/cpp/apk/: CMakeLists.txt  apk.cpp  apk_test.cpp
lib/src/main/cpp/apk/include/apk/: apk.h
lib/src/main/cpp/core/: CMakeLists.txt  native-lib.cpp
lib/src/main/cpp/utils/: CMakeLists.txt  log.h  utils.h
lib/src/main/cpp/utils/include/utils/: log.h  utils.h  v8_wrapper.h
lib/src/main/cpp/wasm-lib/: CMakeLists.txt
scripts/: env.sh
source/android/: build.gradle  gradle.properties
source/android/app/: build.gradle
source/android/gradle/scripts/: androidCommon.gradle  androidNative.gradle
source/android/gradle/wrapper/: gradle-wrapper.properties
source/android/lib/: build.gradle
source/android/vpn/: CMakeLists.txt  build.gradle
source/android/vpn/src/main/cpp/aidl/: CMakeLists.txt
source/android/vpn/src/main/cpp/aidl/com/github/jonforshort/vpn/: IVpnService.cpp  IVpnServiceListener.cpp
source/android/vpn/src/main/cpp/aidl/include/aidl/com/github/jonforshort/vpn/: BnVpnService.h  BnVpnServiceListener.h  IVpnService.h  IVpnServiceListener.h
source/android/vpn/src/main/cpp/vpn/: CMakeLists.txt  LocalVpnService.h  VpnConnection.cpp
source/web_app/: .gitignore
source/web_app/app/: package-lock.json  package.json
source/web_app/wasm/: CMakeLists.txt  CodeCoverage.cmake
source/web_app/wasm/resources/apk/: public.xml
source/web_app/wasm/source/: CMakeLists.txt
source/web_app/wasm/source/apk/: apk.cpp  apk_parser.cpp  scoped_minizip.h  zip_archiver.h
source/web_app/wasm/source/apk/binary_xml/: attributes_getter_visitor.h  binary_xml.cpp  binary_xml.h  binary_xml_element.cpp  binary_xml_element.h  binary_xml_visitor.cpp  string_xml_visitor.cpp  string_xml_visitor.h
source/web_app/wasm/source/apk/include/apk/: apk.h  apk_exception.h
source/web_app/wasm/source/utils/: CMakeLists.txt
source/web_app/wasm/source/utils/include/utils/: sha.h
source/web_app/wasm/source/wasm/: main.cpp
source/web_app/wasm/test/source/apk_analyzer/: CMakeLists.txt  apk_analyzer.cpp
source/web_app/wasm/test/source/apk_analyzer/include/apk_analyzer/: apk_analyzer.h
web_app/: .gitignore
web_app/app/: .firebaserc  angular.json  firebase.json  package-lock.json  package.json
web_app/app/src/: index.html  styles.css  styles.scss
web_app/app/src/app/: app.component.css  app.component.html  app.component.scss  app.component.ts  app.module.ts  log.service.ts  wasm.service.ts
web_app/public/: index.html
web_app/wasm/: .clang-format  CMakeLists.txt  CustomFlags.cmake  CustomProperties.cmake
web_app/wasm/source/: CMakeLists.txt
web_app/wasm/source/apk/: CMakeLists.txt  android_manifest_parser.cpp  android_manifest_parser.h  apk.cpp  apk_parser.cpp  apk_parser.h  apk_test.cpp  binary_xml.cpp  binary_xml.h  binary_xml_visitor.h  scoped_minizip.h  zip_archiver.cpp  zip_archiver.h  zip_stream.h
web_app/wasm/source/apk/binary_xml/: attributes_getter_visitor.cpp  attributes_getter_visitor.h  attributes_setter_visitor.cpp  attributes_setter_visitor.h  binary_xml.cpp  binary_xml.h  binary_xml_element.cpp  binary_xml_element.h  binary_xml_visitor.cpp  binary_xml_visitor.h  resource_types.h  string_xml_visitor.cpp  string_xml_visitor.h
web_app/wasm/source/apk/include/apk/: apk.h
web_app/wasm/source/core/: CMakeLists.txt
web_app/wasm/source/utils/: CMakeLists.txt  LogLevel.cmake  data_input_stream.cpp  sha.cpp
web_app/wasm/source/utils/include/utils/: data_input_stream.h  data_stream.h  emscripten_bind_wrapper.h  log.h  macros.h  utils.h  v8_wrapper.h
web_app/wasm/source/wasm/: CMakeLists.txt  main.cpp
web_app/wasm/test/: CMakeLists.txt
web_app/wasm/test/source/apk_analyzer/: apk_analyzer.cpp
web_app/wasm/test/source/apk_analyzer/include/apk_analyzer/: apk_analyzer.h
(+79 files in other folders)
