cmake_minimum_required(VERSION 3.10.2)

project(localVpn)

enable_testing()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/out/${CMAKE_PROJECT_NAME}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/out/${CMAKE_PROJECT_NAME}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/out/${CMAKE_PROJECT_NAME}/bin)

set(DIR_ROOT_OUT ${CMAKE_CURRENT_SOURCE_DIR}/out)
set(DIR_ROOT_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp)
set(DIR_ROOT_EXTERNAL ${CMAKE_CURRENT_SOURCE_DIR}/../../external)

add_subdirectory(src/main/cpp)
add_subdirectory(${DIR_ROOT_EXTERNAL} external)
