cmake_minimum_required(VERSION 3.10.2)

project(android-introspection)

enable_testing()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set_property(GLOBAL PROPERTY GLOBAL_DEPENDS_DEBUG_MODE 1)

include(${CMAKE_CURRENT_SOURCE_DIR}/CustomProperties.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/CustomFlags.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/CustomWarnings.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/CodeCoverage.cmake)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${MY_CXX_FLAGS_DEBUG}")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${MY_CXX_FLAGS_RELEASE}")

set (DIR_ROOT_OUT      ${CMAKE_CURRENT_SOURCE_DIR}/out/${MY_TARGET})
set (DIR_ROOT_TEST     ${CMAKE_CURRENT_SOURCE_DIR}/test)
set (DIR_ROOT_SOURCE   ${CMAKE_CURRENT_SOURCE_DIR}/source)
set (DIR_ROOT_EXTERNAL ${CMAKE_CURRENT_SOURCE_DIR}/../../external)

add_subdirectory(${DIR_ROOT_EXTERNAL} ${DIR_ROOT_OUT}/external)
add_subdirectory(${DIR_ROOT_TEST}     ${DIR_ROOT_OUT}/test)
add_subdirectory(${DIR_ROOT_SOURCE}   ${DIR_ROOT_OUT}/source)
